--- a/Client.Blazor/Pages/Scooters.razor
+++ b/Client.Blazor/Pages/Scooters.razor
@@ -3,6 +3,7 @@
 @using TrotIS.Shared
 @inject NavigationManager NavigationManager
 @inject Blazored.SessionStorage.ISessionStorageService sessionStorage
+@using Newtonsoft.Json;
 @if (email != null)
 {
     <h1>Available scooters are at: </h1>
@@ -21,7 +22,9 @@
     <table id="scooters" class="display" style="width:100%">
         <thead>
             <tr>
-                <th>ID</th>
+                <th>Brand</th>
+                <th>Model</th>
+                <th>Speed Limit</th>
                 <th>Price</th>
                 <th>Autonomy</th>
             </tr>
@@ -29,13 +32,14 @@
         <tbody>
             @foreach (ScooterInstance scootean in allOurScootersInstance)
             {
-                <tr>
+            <tr>
+                <td>@scootean.Scooter.Brand</td>
+                <td>@scootean.Scooter.Model</td>
+                <td>@scootean.Scooter.SpeedLimit</td>
+                <td>@scootean.Price</td>
+                <td>@scootean.ScooterAutonomy</td>
 
-                    <td>@scootean.ScooterInstanceId</td>
-                    <td>@scootean.Price</td>
-                    <td>@scootean.ScooterAutonomy</td>
-
-                </tr>
+            </tr>
 
             }
 
@@ -44,52 +48,58 @@
     </table>
     <br />
     <br />
-
-    <h1>Rent a scooter </h1>
-
-
-
-
-    <EditForm Model="@rent" OnValidSubmit="@rentScooter">
-
-        <InputSelect id="rentid" @bind-Value="rent.ScooterInstanceId">
-            <option value="">Select an scooter</option>
-            @foreach (ScooterInstance scootea in allOurScootersInstance)
-                {
-                <option value="@scootea.ScooterInstanceId">Price : @scootea.Price autonomy : @scootea.ScooterAutonomy</option>
-
-                }
-        </InputSelect>
+    if (allOurScootersInstance.Count > 0)
+    {
+        <h1>Rent a scooter </h1>
 
 
-        @*Startdate*@
-        <div class="input-group col-lg-12 mb-4">
-            <div class="input-group-prepend">
-                <span class="input-group-text bg-white px-4 border-md border-right-0">
-                    <i class="fa fa-birthday-cake"></i>
-                </span>
+
+
+
+        <EditForm Model="@rent" OnValidSubmit="@rentScooter" OnInvalidSubmit="@OnInvalidSubmit">
+
+            <InputSelect id="rentid" @bind-Value="rentIdTemp">
+                <option value="">Select an scooter</option>
+                @foreach (ScooterInstance scootea in allOurScootersInstance)
+                        {
+                    <option value="@scootea.ScooterInstanceId.ToString()">@scootea.Scooter.Brand @scootea.Scooter.Model - @scootea.Price Lei (@scootea.ScooterAutonomy h)</option>
+
+                        }
+                /**/
+                /**/
+                /**/
+            </InputSelect>
+
+            @*Startdate*@
+            <div class="input-group col-lg-12 mb-4">
+                <div class="input-group-prepend">
+                    <span class="input-group-text bg-white px-4 border-md border-right-0">
+                        <i class="fa fa-birthday-cake"></i>
+                    </span>
+                </div>
+                <InputDate Id="sdate" Class="form-control bg-white border-left-0 border-md" @bind-Value="@rent.StartDate" placeholder="Start date"></InputDate>
+
             </div>
-            <InputDate Id="sdate" Class="form-control bg-white border-left-0 border-md" @bind-Value="@rent.StartDate" placeholder="Start date"></InputDate>
 
-        </div>
+            <div class="input-group col-lg-12 mb-4">
+                <div class="input-group-prepend">
+                    <span class="input-group-text bg-white px-4 border-md border-right-0">
+                        <i class="fa fa-birthday-cake"></i>
+                    </span>
+                </div>
+                <InputDate Id="edate" Class="form-control bg-white border-left-0 border-md" @bind-Value="@rent.EndDate" placeholder="End date"></InputDate>
 
-        <div class="input-group col-lg-12 mb-4">
-            <div class="input-group-prepend">
-                <span class="input-group-text bg-white px-4 border-md border-right-0">
-                    <i class="fa fa-birthday-cake"></i>
-                </span>
             </div>
-            <InputDate Id="edate" Class="form-control bg-white border-left-0 border-md" @bind-Value="@rent.EndDate" placeholder="End date"></InputDate>
 
-        </div>
-
-        <DataAnnotationsValidator />
-        <ValidationSummary />
-        <button type="submit" class="btn btn-primary btn-block py-2">Rent</button>
-        <!-- Line -->
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+            <button type="submit" class="btn btn-primary btn-block py-2">Rent</button>
+            <div class="alert @StatusClass">@StatusMessage</div>
+            <!-- Line -->
 
 
-    </EditForm>
+        </EditForm>
+    }
 }
 else
 {
@@ -103,8 +113,11 @@ else
     private List<ScooterInstance> allOurScootersInstance = new List<ScooterInstance>();
     private List<Guid> allScootersGuid = new List<Guid>();
     private List<Scooter> allScooters = new List<Scooter>();
-    private Guid locationGuidDrop;
+    private string locationGuidDrop = "";
+    private string rentIdTemp = "";
     public Rent rent = new Rent();
+    private string StatusMessage;
+    private string StatusClass;
 
 
     string URL = @"http://localhost:5009/api/locations";
@@ -113,12 +126,23 @@ else
     string URLScooters = @"http://localhost:5005/api/scooterinstance/get_all_scooters";
     string URLScooterInstances = @"http://localhost:5005/api/scooterinstance/get_all_scooterinstances";
     private Guid location = Guid.Empty;
+
+    protected void OnInvalidSubmit()
+    {
+        StatusClass = "alert-danger";
+        StatusMessage = "You already have an active rent";
+    }
+
     private async void rentScooter()
     {
         rent.UserId = await sessionStorage.GetItemAsync<Guid>("userID");
+        rent.ScooterInstanceId = Guid.Parse(rentIdTemp);
+        rent.LocationId = Guid.Parse(locationGuidDrop);
         var response = await Http.PostAsJsonAsync(rentURL, rent);
+        if (response.StatusCode.ToString() == "NotFound")
+            OnInvalidSubmit();
 
-
+        this.StateHasChanged();
     }
     public async void GetOurLocations()
     {
@@ -136,7 +160,7 @@ else
 
     private async void generateScooters()
     {
-        await GetOurScootersGuid(locationGuidDrop);
+        await GetOurScootersGuid(Guid.Parse(locationGuidDrop));
     }
 
     protected async override void OnInitialized()
@@ -168,8 +192,9 @@ else
         try
         {
             var result = await Http.PostAsJsonAsync<List<Guid>>(URLScooterInstances, allScootersGuid);
-
-            allOurScootersInstance = await result.Content.ReadAsAsync<List<ScooterInstance>>();
+            var tempInst = await result.Content.ReadAsStringAsync();
+            allOurScootersInstance = JsonConvert.DeserializeObject<List<ScooterInstance>>(tempInst);
+            var a = 2;
 
         }
         catch
@@ -182,9 +207,7 @@ else
             allScooters = await result.Content.ReadAsAsync<List<Scooter>>();
 
         }
-        catch
-        { }
-
+        catch { }
         this.StateHasChanged();
 
     }
@@ -297,10 +320,8 @@ else
         public Guid LocationId { get; set; }
         public Guid UserId { get; set; }
         public Guid ScooterInstanceId { get; set; }
-        public DateTime OrderDate { get; set; }
         public DateTime StartDate { get; set; }
         public DateTime EndDate { get; set; }
-        public bool IsCancelled { get; set; }
     }
 
 }
