--- a/Client.Blazor/Pages/ManageScooters.razor
+++ b/Client.Blazor/Pages/ManageScooters.razor
@@ -16,7 +16,7 @@
 			<div class="card-header" id="headingOne">
 				<h5 class="mb-0">
 					<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-						Manage models of scooters
+						<span style="color: Black; text-decoration:none;">Manage models of scooters</span>
 					</button>
 				</h5>
 			</div>
@@ -171,7 +171,7 @@
 			<div class="card-header" id="headingTwo">
 				<h5 class="mb-0">
 					<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-						Manage scooters instances
+						<span style="color: Black; text-decoration:none;">Manage scooters instances</span>
 					</button>
 				</h5>
 			</div>
